# agentic-ai-newsletter-service

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.pipeline  README.md  api_server.py  example.env  generate_token.py  main.py  pyproject.toml  run_pipeline.py  server.py  tree.py
app/agents/: email_agent.py  newsletter_agent.py  orchestrator.py  ranking_agent.py  rss_scraper_agent.py  scraping_agent.py  summarization_agent.py
app/api/: api.py
app/config/: rss_sources.json
app/db/: init_db.py  models.py  session.py
app/scrapers/: extractor.py  rss_scraper.py
app/services/: article_repository.py  email_service.py  extractor_service.py  model_discovery_service.py  pipeline_service.py  ranking_service.py  rss_service.py  semantic_ranking_service.py  summarizer_service.py
app/tests/: test_pipeline.py
app/user/: profile.py
app/utils/: article_selector.py  email_template.py  newsletter_template.py  sub_layout.py
docker/: docker-compose.yml
frontend/: index.html  style.css
scripts/: find_models.py  update_models.py
